# openclaw-voice

./: .env.example  Dockerfile  README.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt
config/: vad_settings.json
src/client/: index.html
src/server/: main.py  stt.py  text_utils.py  tts.py  vad.py
tests/: test_modules.py
